# docker_avia-lite

./: Dockerfile  README.md  docker-compose.yml
src/: avia.database.info.txt  disclaimer.php  download.php  error_page.php  fdiDefinitions.php  globals.php  index.php  report_params.php  results.php  retrieve_a_request.php  sub_analysis.php  submit_a_question.php  successful_retrieval.php  template.php  tutorials.php  tutorials_page.php  upload_viz.php
src/FDI/: .test.php.swp  DbUtils.php  FdiQueries.php  FdiUtils.php  GenUtils.php  MysqlDbUtils.php  OraDbUtils.php  XpathUtils.php  fdi.xml  fdiPaths.txt  fdiPaths.xml  genPaths.php  test.php
src/FDI/config/: fdiDB1Config.xml
src/FDI/xml/: updtEdgeWts.pl
src/css/: jquery-ui.css  jqueryslidemenu.css  results_styles.css  styles.css
src/data/completed/: viz574dd67b46566.abcc  (+106 more)
src/data/scripts.dir/perl_modules/intltool-0.36.2/: ChangeLog  Makefile.am  Makefile.in  configure  configure.in  intltool-extract.in.in  intltool-merge.in.in  intltool-update.in.in  intltool.spec  intltoolize.in
src/data/scripts.dir/perl_modules/intltool-0.36.2/doc/: Makefile.in
src/data/scripts.dir/perl_modules/intltool-0.36.2/tests/: Makefile.in  selftest.pl.in
src/data/scripts.dir/perl_modules/intltool-0.36.2/tests/cases/: Makefile.am  Makefile.in  extract13.desktop.in
src/data/scripts.dir/perl_modules/intltool-0.36.2/tests/results/: Makefile.am  Makefile.in  extract13.desktop.in.h  merge12.xml
src/js/: javascripts.js  jqueryslidemenu.js
src/xml/: annot_viz_dboptions.php  footer.php  header.php  navigation.php  side_nav.php
(+38 files in other folders)
